zweite box: neue faelle je 100k EW in 7 tagen statt durchschnittliche fallzhal letzte 7 tage

--- a/Start.Rmd
+++ b/Start.Rmd
@@ -43,23 +43,38 @@ valueBox(value= paste("R =",format(indicatorR,digits=2,decimal.mark = ","))  ,
          icon = "fa-users"
         )
 ```
-
 Row 
 ------------------------------------------------------------------------
-### Neue Fälle pro Tag (7-Tages-Mittelwert) 
+### Neue Fälle je 100.000 Einwohnende in 7 Tagen
 
 ```{r}
-faelleprotag <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_pro_Tag)
-gesundheitsamtzahl <- 380
-valueBox(faelleprotag,
-         caption="Neue Fälle pro Tag (7-Tages-Durchschnitt)",
+faelle7tage100kEW <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_je100TsdEinw)
+valueBox(faelle7tage100kEW,
+         caption="Neue Fälle je 100.000 Einwohnende in 7 Tagen",
          icon = "fa-chart-line",
-         color = case_when(faelleprotag < gesundheitsamtzahl*3 ~ "#B1C800",
-                           faelleprotag >= gesundheitsamtzahl*3 & 
-                             faelleprotag < gesundheitsamtzahl*4 ~ "#E49900",
-                           faelleprotag >= gesundheitsamtzahl*4 ~ "#E40000")
+         color = case_when(faelle7tage100kEW < 35 ~ "#B1C800",
+                           faelle7tage100kEW >= 35 & 
+                             faelle7tage100kEW < 50 ~ "#E49900",
+                           faelle7tage100kEW >= 50 ~ "#E40000")
         )
 ```
+
+<!-- Row  -->
+<!-- ------------------------------------------------------------------------ -->
+<!-- ### Neue Fälle pro Tag (7-Tages-Mittelwert)  -->
+
+<!-- ```{r} -->
+<!-- faelleprotag <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_pro_Tag) -->
+<!-- gesundheitsamtzahl <- 380 -->
+<!-- valueBox(faelleprotag, -->
+<!--          caption="Neue Fälle pro Tag (7-Tages-Durchschnitt)", -->
+<!--          icon = "fa-chart-line", -->
+<!--          color = case_when(faelleprotag < gesundheitsamtzahl*3 ~ "#B1C800", -->
+<!--                            faelleprotag >= gesundheitsamtzahl*3 &  -->
+<!--                              faelleprotag < gesundheitsamtzahl*4 ~ "#E49900", -->
+<!--                            faelleprotag >= gesundheitsamtzahl*4 ~ "#E40000") -->
+<!--         ) -->
+<!-- ``` -->
 
 Row 
 ------------------------------------------------------------------------
