--- a/Start.Rmd
+++ b/Start.Rmd
@@ -102,7 +102,7 @@ Row {data-height=125}
 **Legende:** \
 *Reproduktionszahl R*: Anzahl der Personen, die eine infizierte Person durchschnittlich mit COVID-19 infiziert. \
 <!-- *Neue Fälle pro Tag (7-Tages-Durchschnitt)*: Durchschnittliche Anzahl neuer Fälle pro Tag in den letzten 7 Meldetagen.\ -->
-*Neue Fälle je 100.000 Einwohnende in 7 Tagen*: Auch als "Handlungsgrenze" bezeichnet.
+*Neue Fälle je 100.000 Einwohnende in 7 Tagen*: Auch als "7-Tage-Inzidenz" oder "Handlungsgrenze" bezeichnet.\
 *Effektive Vorwarnzeit bei R=1,3*: Anzahl von Tagen bis zur Überschreitung der stationären Behandlungskapazitäten ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`.
 
 Row {data-height=170}
