--- a/Start.Rmd
+++ b/Start.Rmd
@@ -53,7 +53,12 @@ Row
 faelleprotag <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_pro_Tag)
 faelle7tage100kEW <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_je100TsdEinw)
 valueBox(faelle7tage100kEW,
-         caption="Neue Fälle je 100.000 Einwohnende in 7 Tagen",
+         caption=paste0("Neue Fälle je 100.000 Einwohnende in 7 Tagen \n unter 60-Jährige: ",
+                        letzte_7_tage_altersgruppen_bund %>% pull(`Faelle_letzte_7_Tage_je100TsdEinw_0-59`),
+                        ", 60- bis 79-Jährige: ",
+                        letzte_7_tage_altersgruppen_bund %>% pull(`Faelle_letzte_7_Tage_je100TsdEinw_60-79`),
+                        ", Über-80-Jährige: ",
+                        letzte_7_tage_altersgruppen_bund %>% pull(`Faelle_letzte_7_Tage_je100TsdEinw_80+`)),
          icon = "fa-chart-line",
          color = case_when(faelle7tage100kEW < 35 ~ "#B1C800",
                            faelle7tage100kEW >= 35 & 
