--- a/Start.Rmd
+++ b/Start.Rmd
@@ -23,7 +23,7 @@ Row {data-height=125}
 
 ### **Zi-Frühindikatoren:** 
 
-Das Zi hat Frühindikatoren entwickelt, die frühzeitig auf die Gefahr für die Überlastung des Gesundheitswesens durch COVID-19 hinweisen sollen. Nachfolgend wird unsere tägliche Lageeinschätzung im Hinblick auf diese Indikatoren dargestellt. **Nähere Informationen finden Sie [hier](https://www.zi.de/fileadmin/images/content/PMs/Fruehindikator_fuer_ein_Management_des_Pandemiegeschehens_2020-08-03-v2.pdf)**. 
+Das Zi hat Frühindikatoren entwickelt, die frühzeitig auf die Gefahr für die Überlastung des Gesundheitswesens durch COVID-19 hinweisen sollen. Nachfolgend wird unsere tägliche Lageeinschätzung im Hinblick auf diese Indikatoren dargestellt. **Nähere Informationen finden Sie [hier](https://www.zi.de/fileadmin/images/content/PMs/Fruehindikator_fuer_ein_Management_des_Pandemiegeschehens_2020-10-15.pdf)**. 
 
 Stand: `r format(now(),format="%d.%m.%Y %H.%M Uhr")`
 
@@ -108,7 +108,7 @@ Row {data-height=175}
 ***Reproduktionszahl R***: Anzahl der Personen, die eine infizierte Person durchschnittlich mit COVID-19 infiziert. \
 <!-- *Neue Fälle pro Tag (7-Tages-Durchschnitt)*: Durchschnittliche Anzahl neuer Fälle pro Tag in den letzten 7 Meldetagen.\ -->
 ***Neue Fälle je 100.000 Einwohnende in 7 Tagen***: Auch als "7-Tage-Inzidenz" oder "Handlungsgrenze" bezeichnet.\
-***Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung von 25% der stationären Behandlungskapazitäten (Annahme 25% der Kapazität steht für COVID-19 zur Verfügung) ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. Die "effektive Vorwarnzeit" ist Vorwarnzeit abzüglich der angenommenen Reaktionszeit von 21 Tagen, bis ergriffene neue Maßnahmen wirken.
+***Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung von 25% der stationären Behandlungskapazitäten (Annahme 25% der Kapazität steht für COVID-19 zur Verfügung) ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. Wir berücksichtigen die aktuelle Alterstruktur der Infizierten und unterschiedliche Raten der Intensivfälle: 1,91% für Unter-60-Jährige, 9,1% für 60-bis-79-Jährige, sowie 14,5% für Über-80-Jährige. Die "effektive Vorwarnzeit" ist die Vorwarnzeit abzüglich der angenommenen Reaktionszeit von 21 Tagen, bis ergriffene neue Maßnahmen wirken.
 <!-- ***Effektive Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung von 25% der stationären Behandlungskapazitäten (Annahme 25% der Kapazität steht für COVID-19 zur Verfügung) ab heute (Annahme **Reaktionszeit von 21 Tagen bis Wirkung neuer Maßnahmen**), falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. -->
 
 
