--- a/Start.Rmd
+++ b/Start.Rmd
@@ -18,7 +18,27 @@ output:
 
 ```{r setup, include=FALSE}
 library(flexdashboard)
+# Packages
+library(DT)
+library(DBI)
+library(forcats)
+library(EpiEstim)
+library(plotly)
+library(zicolors)
+library(deSolve)
+library(jsonlite)
+library(readxl)
+library(data.table)
+library(dplyr)
+library(glue)
+library(lubridate)
+library(tidyverse)
+library(tidyr)
+library(stringr)
+library(ggplot2)
+library(dtplyr)
 source("R/functions.R", encoding = "UTF-8")
+# load("~/covid19dashboard/testforknit.RData")
 ```
 
 Row {data-height=150}
@@ -104,13 +124,13 @@ valueBox(paste(vorwarnzeitaktuell,"Tage"),
         )
 ```
 
-Row {data-height=220}
+Row {data-height=260}
 ------------------------------------------------------------------------
 \
 **Legende:** \
 ***Reproduktionszahl R***: Anzahl der Personen, die eine infizierte Person durchschnittlich mit COVID-19 infiziert. \
 <!-- *Neue Fälle pro Tag (7-Tages-Durchschnitt)*: Durchschnittliche Anzahl neuer Fälle pro Tag in den letzten 7 Meldetagen.\ -->
-***Neue Fälle je 100.000 Einwohnende in 7 Tagen***: Auch als "7-Tage-Inzidenz" oder "Handlungsgrenze" bezeichnet.\
+***Neue Fälle je 100.000 Einwohnende in 7 Tagen***: Auch als "7-Tage-Inzidenz" oder "Handlungsgrenze" bezeichnet. Wegen Meldeverzügen fehlen für einige Kreise/Bundesländer die Fallzahlen des Vortages. Fehlende Werte imputieren wir mit dem Mittelwert der vorhergehenden 6 Tage, um die 7-Tage-Inzidenz vergleichbarer zu machen.\
 ***Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung der stationären Behandlungskapazitäten (Annahme: für zukünftige COVID-19-Fälle stehen die derzeit freien Betten sowie bereits mit COVID-19-Fällen belegte Betten zur Verfügung) ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. Wir berücksichtigen die aktuelle Altersstruktur der Infizierten und unterschiedliche Raten der Intensivfälle: 1,37% für Unter-60-Jährige, 10,2% für 60-bis-79-Jährige, sowie 18,3% für Über-80-Jährige. Diese Quoten wurden auf Basis der im Intensivregister gemeldeten Fälle mit Korrektur für Doppelzählungen auf Grund von Verlegungen (27%) sowie COVID-19-Charakteristiken aus der Literatur bestimmt. Die "effektive Vorwarnzeit" ist die Vorwarnzeit abzüglich der angenommenen Reaktionszeit von 21 Tagen, bis ergriffene neue Maßnahmen wirken. Vgl. Methodenpapier.
 
 <!-- ***Effektive Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung von 25% der stationären Behandlungskapazitäten (Annahme 25% der Kapazität steht für COVID-19 zur Verfügung) ab heute (Annahme **Reaktionszeit von 21 Tagen bis Wirkung neuer Maßnahmen**), falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. -->
@@ -142,9 +162,16 @@ Row {data-height=400}
 
 ```{r plotakutinfiziert}
 
-ggplotly(akutinfiziert + labs(title=""), width=800, height=400) %>%
-   config(displayModeBar = FALSE, responsive=T)
+ggplotly(akutinfiziert + labs(title="")) %>% # , width=800, height=400
+   config(displayModeBar = FALSE, responsive=TRUE)
 ```
+
+<!-- ### **Entwicklung der akut Infizierten** {.mobile} -->
+
+<!-- ```{r plotakutinfiziert_mobile, out.width = "100%"} -->
+
+<!-- akutinfiziert + labs(title="") -->
+<!-- ``` -->
 
 Row {data-height=100}
 ------------------------------------------------------------------------
@@ -155,13 +182,21 @@ Dargestellt ist die Entwicklung der Anzahl von akut infizierten Personen in Deut
 
 Row {data-height=400}
 ------------------------------------------------------------------------
+
 ### **Entwicklung des Alters der Infizierten sowie des Verhältnis von ITS- und Todesfällen zu gemeldeten Fällen**
 
 ```{r plotagefatality}
-age_plot_fatality() %>%
-   config(displayModeBar = FALSE, responsive=T)
-
+ggplotly(age_plot_fatality, tooltip = c("x", "y")) %>% # , width=800, height=400
+  layout(legend = list(orientation = "h", x = 0.1, y = 1.2)) %>%
+  config(displayModeBar = FALSE, responsive=TRUE)
 ```
+
+<!-- ### **Entwicklung des Alters der Infizierten sowie des Verhältnis von ITS- und Todesfällen zu gemeldeten Fällen** {.mobile} -->
+
+<!-- ```{r plotagefatality_mobile} -->
+<!-- age_plot_fatality -->
+
+<!-- ``` -->
 
 
 Row {data-height=150}
@@ -175,10 +210,16 @@ Row {data-height=400}
 ### **Entwicklung der Reproduktionszahl**
 
 ```{r plotBLR}
-mitigationsplot_blvergleich() %>%
-   config(displayModeBar = FALSE, responsive=T)
+ggplotly(mitigationsplot_blvergleich, tooltip = c("x", "y", "text")) %>% # , width=800, height=400
+  config(displayModeBar = FALSE, responsive=TRUE)
 
 ```
+
+<!-- ### **Entwicklung der Reproduktionszahl** {.mobile} -->
+
+<!-- ```{r plotBLR_mobile} -->
+<!-- mitigationsplot_blvergleich -->
+<!-- ``` -->
 
 Row {data-height=100}
 ------------------------------------------------------------------------
@@ -192,10 +233,15 @@ Row {data-height=400}
 ### **Entwicklung der Vorwarnzeit (und Vergleich zum R-Wert des RKI)**
 
 ```{r plotVWZR}
-vorwarnzeitverlauf_plot() %>%
-   config(displayModeBar = FALSE, responsive=T)
-
+ggplotly(vorwarnzeitverlauf_plot, tooltip = c("x", "y", "text")) %>% # , width=800, height=400
+  config(displayModeBar = FALSE, responsive=TRUE)
 ```
+
+<!-- ### **Entwicklung der Vorwarnzeit (und Vergleich zum R-Wert des RKI)** {.mobile} -->
+
+<!-- ```{r plotVWZR_mobile} -->
+<!-- vorwarnzeitverlauf_plot -->
+<!-- ``` -->
 
 Row {data-height=100}
 ------------------------------------------------------------------------
@@ -207,6 +253,8 @@ Row
 
 ### **Überblick zu den Kennzahlen der Bundesländer**
 
+<!-- <div style = "width:99%; height:ato; margin: 0px; padding-right:2rem;"> -->
+<div style = "width:99% !important; height:auto; margin: auto;">
 ```{r tableBL}
 DT::datatable(rki_fallzahl_bl(),
               extensions = 'Responsive',
@@ -217,6 +265,22 @@ DT::datatable(rki_fallzahl_bl(),
                              initComplete = JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
 
 ```
+</div>
+
+<!-- ### **Überblick zu den Kennzahlen der Bundesländer** {.mobile} -->
+
+<!-- ```{r tableBL_mobile} -->
+<!-- DT::datatable(rki_fallzahl_bl(), -->
+<!--               extensions = 'Responsive', -->
+<!--               options = list(paging = FALSE, -->
+<!--                              searching = FALSE, -->
+<!--                              language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'), -->
+<!--                              server = FALSE, -->
+<!--                              initComplete = JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}"))) -->
+
+<!-- ``` -->
+
+
 
 Row {data-height=250}
 ------------------------------------------------------------------------
