--- a/Start.Rmd
+++ b/Start.Rmd
@@ -37,8 +37,8 @@ library(tidyr)
 library(stringr)
 library(ggplot2)
 library(dtplyr)
-source("R/functions.R", encoding = "UTF-8")
-# load("~/covid19dashboard/testforknit.RData")
+# source("R/functions.R", encoding = "UTF-8")
+load("~/covid19dashboard/testforknit.RData")
 ```
 
 Row {data-height=150}
@@ -161,17 +161,16 @@ Row {data-height=400}
 ### **Entwicklung der akut Infizierten**
 
 ```{r plotakutinfiziert}
-
 ggplotly(akutinfiziert + labs(title="")) %>% # , width=800, height=400
    config(displayModeBar = FALSE, responsive=TRUE)
 ```
 
-<!-- ### **Entwicklung der akut Infizierten** {.mobile} -->
+### **Entwicklung der akut Infizierten** {.mobile}
 
-<!-- ```{r plotakutinfiziert_mobile, out.width = "100%"} -->
-
-<!-- akutinfiziert + labs(title="") -->
-<!-- ``` -->
+```{r plotakutinfiziert_mobile, out.width = "100%"}
+ggplotly(akutinfiziert + labs(title=""), width=350, height=400) %>% # 
+   config(displayModeBar = FALSE, responsive=TRUE)
+```
 
 Row {data-height=100}
 ------------------------------------------------------------------------
@@ -187,16 +186,17 @@ Row {data-height=400}
 
 ```{r plotagefatality}
 ggplotly(age_plot_fatality, tooltip = c("x", "y")) %>% # , width=800, height=400
-  layout(legend = list(orientation = "h", x = 0.1, y = 1.2)) %>%
+  layout(legend = list(orientation = "h", x = 0.1, y = 1.2), autosize=TRUE) %>%
   config(displayModeBar = FALSE, responsive=TRUE)
 ```
 
-<!-- ### **Entwicklung des Alters der Infizierten sowie des Verhältnis von ITS- und Todesfällen zu gemeldeten Fällen** {.mobile} -->
+### **Entwicklung des Alters der Infizierten sowie des Verhältnis von ITS- und Todesfällen zu gemeldeten Fällen** {.mobile}
 
-<!-- ```{r plotagefatality_mobile} -->
-<!-- age_plot_fatality -->
-
-<!-- ``` -->
+```{r plotagefatality_mobile}
+ggplotly(age_plot_fatality, tooltip = c("x", "y"), width=350, height=400) %>% # 
+  layout(legend = list(orientation = "h", x = 0.1, y = 1.2), autosize=TRUE) %>%
+  config(displayModeBar = FALSE, responsive=TRUE)
+```
 
 
 Row {data-height=150}
@@ -237,11 +237,12 @@ ggplotly(vorwarnzeitverlauf_plot, tooltip = c("x", "y", "text")) %>% # , width=8
   config(displayModeBar = FALSE, responsive=TRUE)
 ```
 
-<!-- ### **Entwicklung der Vorwarnzeit (und Vergleich zum R-Wert des RKI)** {.mobile} -->
+### **Entwicklung der Vorwarnzeit (und Vergleich zum R-Wert des RKI)** {.mobile}
 
-<!-- ```{r plotVWZR_mobile} -->
-<!-- vorwarnzeitverlauf_plot -->
-<!-- ``` -->
+```{r plotVWZR_mobile}
+ggplotly(vorwarnzeitverlauf_plot, tooltip = c("x", "y", "text"), width=350, height=400) %>% # 
+  config(displayModeBar = FALSE, responsive=TRUE)
+```
 
 Row {data-height=100}
 ------------------------------------------------------------------------
