--- a/Test.Rmd
+++ b/Test.Rmd
@@ -17,9 +17,101 @@ output:
 Row
 -------------------------------------
 
+### **Zi-Frühindikatoren:** 
+
+Das Zi hat Frühindikatoren entwickelt, die frühzeitig auf die Gefahr für die Überlastung des Gesundheitswesens durch COVID-19 hinweisen sollen. Nachfolgend wird unsere tägliche Lageeinschätzung im Hinblick auf diese Indikatoren dargestellt. Nähere Informationen finden Sie [hier](https://www.zi.de/fileadmin/images/content/PMs/Fruehindikator_fuer_ein_Management_des_Pandemiegeschehens_2020-10-15.pdf). **Hinweis: Die Berechnung der Vorwarnzeit wurde am 26.10.2020 angepasst (Berücksichtigung der gemeldeten freien Kapazitäten auf Intensivstationen sowie Anpassung der altersspezifischen ITS-Fall-Raten).** Das Methodenpapier wird derzeit aktualisiert und zeitnah bereitgestellt.
+
+Stand: `r format(now(),format="%d.%m.%Y %H.%M Uhr")`
+
+Row
+------------------------------------------------------------------------
+
+### Reproduktionszahl 
+
+```{r indicatorR}
+indicatorR <- aktuell %>% filter(id==0) %>% collect() %>% pull(R0)
+valueBox(value= paste("R =",format(indicatorR,digits=2,decimal.mark = ","))  ,
+         caption="Reproduktionszahl",
+         color = case_when(indicatorR < 1.0 ~ "#B1C800",
+                           indicatorR >= 1.0 & 
+                             indicatorR < 1.3 ~ "#E49900",
+                           indicatorR >= 1.3 ~ "#E40000"),
+         icon = "fa-users"
+        )
+```
+
+Row
+------------------------------------------------------------------------
+
+### Neue Fälle je 100.000 Einwohnende in 7 Tagen
+
+```{r indicator7TI}
+faelleprotag <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_pro_Tag)
+faelle7tage100kEW <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_je100TsdEinw)
+valueBox(faelle7tage100kEW,
+         caption=paste0("Neue Fälle je 100.000 Einwohnende in 7 Tagen \n unter 60-Jährige: ",
+                        letzte_7_tage_altersgruppen_bund %>% pull(`Faelle_letzte_7_Tage_je100TsdEinw_0-59`),
+                        ", 60- bis 79-Jährige: ",
+                        letzte_7_tage_altersgruppen_bund %>% pull(`Faelle_letzte_7_Tage_je100TsdEinw_60-79`),
+                        ", Über-80-Jährige: ",
+                        letzte_7_tage_altersgruppen_bund %>% pull(`Faelle_letzte_7_Tage_je100TsdEinw_80+`)),
+         icon = "fa-chart-line",
+         color = case_when(faelle7tage100kEW < 35 ~ "#B1C800",
+                           faelle7tage100kEW >= 35 & 
+                             faelle7tage100kEW < 50 ~ "#E49900",
+                           faelle7tage100kEW >= 50 ~ "#E40000")
+        )
+```
+
+Row
+------------------------------------------------------------------------
+
+### Vorwarnzeit bei R=1,3 
+
+```{r indicatorVWZ}
+vorwarnzeitaktuell <- vorwarnzeitergebnis %>% filter(id==0) %>% pull(Vorwarnzeit) # pull(Vorwarnzeit_effektiv)
+valueBox(paste(vorwarnzeitaktuell,"Tage"),
+         caption=paste0("Vorwarnzeit bis Erreichen der Kapazitätsgrenze \n effektive Vorwarnzeit: ", vorwarnzeitergebnis %>% filter(id==0) %>% pull(Vorwarnzeit_effektiv), " Tage"), # "Effektive Vorwarnzeit bei R=1,3",
+         icon = "fa-calendar-alt",
+         color = case_when(vorwarnzeitaktuell > 81 ~ "#B1C800",
+                           vorwarnzeitaktuell <= 81 & # 60
+                             vorwarnzeitaktuell >= 22 ~ "#E49900",
+                           vorwarnzeitaktuell < 22 ~ "#E40000") # 14
+        )
+```
+
+Row
+------------------------------------------------------------------------
+### Legende
+***Reproduktionszahl R***: Anzahl der Personen, die eine infizierte Person durchschnittlich mit COVID-19 infiziert. \
+<!-- *Neue Fälle pro Tag (7-Tages-Durchschnitt)*: Durchschnittliche Anzahl neuer Fälle pro Tag in den letzten 7 Meldetagen.\ -->
+***Neue Fälle je 100.000 Einwohnende in 7 Tagen***: Auch als "7-Tage-Inzidenz" oder "Handlungsgrenze" bezeichnet. Wegen Meldeverzügen fehlen für einige Kreise/Bundesländer die Fallzahlen des Vortages. Fehlende Werte imputieren wir mit dem Mittelwert der vorhergehenden 6 Tage, um die 7-Tage-Inzidenz vergleichbarer zu machen.\
+***Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung der stationären Behandlungskapazitäten (Annahme: für zukünftige COVID-19-Fälle stehen die derzeit freien Betten sowie bereits mit COVID-19-Fällen belegte Betten zur Verfügung) ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. Wir berücksichtigen die aktuelle Altersstruktur der Infizierten und unterschiedliche Raten der Intensivfälle: 1,37% für Unter-60-Jährige, 10,2% für 60-bis-79-Jährige, sowie 18,3% für Über-80-Jährige. Diese Quoten wurden auf Basis der im Intensivregister gemeldeten Fälle mit Korrektur für Doppelzählungen auf Grund von Verlegungen (27%) sowie COVID-19-Charakteristiken aus der Literatur bestimmt. Die "effektive Vorwarnzeit" ist die Vorwarnzeit abzüglich der angenommenen Reaktionszeit von 21 Tagen, bis ergriffene neue Maßnahmen wirken. Vgl. Methodenpapier.
+
+Row
+-------------------------------------
+
 ### **Entwicklung der akut Infizierten**
 
 ```{r plotakutinfiziert}
 ggplotly(akutinfiziert + labs(title="")) %>% # , width=800, height=400
    config(displayModeBar = FALSE, responsive=TRUE)
 ```
+
+Row
+-----------------------------------------------------------------------
+
+### **Überblick zu den Kennzahlen der Bundesländer**
+
+<div style = "width:99% !important; height:auto; margin: auto;">
+```{r tableBL}
+DT::datatable(rki_fallzahl_bl(),
+              extensions = 'Responsive',
+              options = list(paging = FALSE,
+                             searching = FALSE,
+                             language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
+                             server = FALSE,
+                             initComplete = JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
+
+```
+</div>
