--- a/Test.Rmd
+++ b/Test.Rmd
@@ -16,6 +16,24 @@ output:
 ---
 
 Row
+-----------------------------------------------------------------------
+
+### **Überblick zu den Kennzahlen der Bundesländer**
+
+<!-- <div style = "width:99% !important; height:auto; margin: auto;"> -->
+```{r tableBL}
+DT::datatable(rki_fallzahl_bl(),
+              extensions = 'Responsive',
+              options = list(paging = FALSE,
+                             searching = FALSE,
+                             language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
+                             server = FALSE,
+                             initComplete = JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
+
+```
+<!-- </div> -->
+
+Row
 -------------------------------------
 
 ### **Zi-Frühindikatoren:** 
@@ -98,21 +116,3 @@ Row
 ggplotly(akutinfiziert + labs(title="")) %>% # , width=800, height=400
    config(displayModeBar = FALSE, responsive=TRUE)
 ```
-
-Row
------------------------------------------------------------------------
-
-### **Überblick zu den Kennzahlen der Bundesländer**
-
-<div style = "width:99% !important; height:auto; margin: auto;">
-```{r tableBL}
-DT::datatable(rki_fallzahl_bl(),
-              extensions = 'Responsive',
-              options = list(paging = FALSE,
-                             searching = FALSE,
-                             language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
-                             server = FALSE,
-                             initComplete = JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
-
-```
-</div>
